--- a/build.gradle
+++ b/build.gradle
@@ -122,13 +122,18 @@ dependencies {
         implementation 'com.cleanroommc:assetmover:2.5'
     }
     if (project.use_mixins.toBoolean()) {
-        implementation 'zone.rong:mixinbooter:7.1'
+        implementation('zone.rong:mixinbooter:10.2') {
+            transitive = false
+        }
+        annotationProcessor('zone.rong:mixinbooter:10.2') {
+            transitive = false
+        }
     }
     implementation 'com.cleanroommc:configanytime:3.0'
 
     implementation files('libs/CraftTweaker2-MC1120-Mod-JEI-1.12-4.1.20.670-deobf.jar')
     implementation rfg.deobf("curse.maven:Baubles-227083:2518667")
-    implementation rfg.deobf("curse.maven:zenutils-401178:5162113-sources-5162114")
+    implementation rfg.deobf("curse.maven:zenutils-401178:5935733-sources-5935735")
     implementation rfg.deobf("curse.maven:modtweaker-220954:3488553")
     implementation rfg.deobf("curse.maven:hammerlib-247401:3611193")
     implementation rfg.deobf("curse.maven:thaumcraft-223628:2629023")
@@ -147,7 +152,7 @@ dependencies {
     implementation rfg.deobf("vazkii.patchouli:Patchouli:1.0-21.5")
     implementation rfg.deobf("cofh:RedstoneFlux:1.12-2.0.0.1:universal")
     implementation rfg.deobf("mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.28-17")
-    implementation rfg.deobf("zone.rong:mixinbooter:4.2")
+    implementation rfg.deobf("zone.rong:mixinbooter:10.2")
     implementation rfg.deobf("com.blamejared:MTLib:3.0.5.15")
     implementation rfg.deobf("mezz.jei:jei_1.12.2:4.16.1.302")
     implementation rfg.deobf("vazkii.botania:Botania:r1.10-363.148")
@@ -160,15 +165,16 @@ dependencies {
     }
 
     if (project.use_mixins.toBoolean()) {
+        annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
+        annotationProcessor 'com.google.guava:guava:32.1.2-jre'
+        annotationProcessor 'com.google.code.gson:gson:2.8.9'
         // Change your mixin refmap name here:
-        String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${project.archives_base_name}.refmap.json")
-        api(mixin) {
+        String mixinBooter = modUtils.enableMixins('zone.rong:mixinbooter:10.2')
+        // modUtils.enableMixins('zone.rong:mixinbooter:10.2', 'mod_id.mixins.refmap.json') << add refmap name as 2nd arg (optional)
+        api(mixinBooter) {
             transitive = false
         }
-        annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
-        annotationProcessor 'com.google.guava:guava:24.1.1-jre'
-        annotationProcessor 'com.google.code.gson:gson:2.8.6'
-        annotationProcessor(mixin) {
+        annotationProcessor(mixinBooter) {
             transitive = false
         }
     }
