fix: fix IDEA refactor oops

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ use_assetmover=false
 use_access_transformer=true
 # Coremod Arguments
 include_mod=true
-coremod_plugin_class_name=core.internal.impl.dev.ikx.rt.CoreModBoot
+coremod_plugin_class_name=dev.ikx.rt.impl.internal.core.CoreModBoot
